--- a/src/app/components/popups/btn-close/btn-close.component.html
+++ b/src/app/components/popups/btn-close/btn-close.component.html
@@ -1,22 +1,20 @@
-<div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+<div class="fixed-action-btn" style="top: 25px; right: 24px;">
 
-  <a class="btn-floating btn-large pink waves-light" mdbWavesEffect (click)="fixed.toggle($event)">
-    <i class="fas fa-ellipsis-v"></i>
+  <a class="btn-floating btn-large red waves-light" mdbWavesEffect (click)="onCloseClick()">
+    <i class="fas fa-times"></i>
   </a>
 
-  <div class="fixed_collapse" mdbCollapse="isCollapsed" #fixed="bs-collapse">
+  <!-- <div class="fixed_collapse" mdbCollapse="isCollapsed" #fixed="bs-collapse">
     <ng-template #popTemplate>
-      <!-- <a class=""> -->
-          <i 
-          class="ion-ios-copy copy-button text-monospace" 
-          style="cursor: pointer;" 
-          ngxClipboard 
-          [cbContent]="'coris.network/'+link" 
-          (click)="onCopySucceess()"
-          mdbTooltip="copy to clipboard" mdbTooltipPosition="above">
-          coris.network/{{link}}
-        </i>
-      <!-- </a> -->
+      <i 
+      class="ion-ios-copy copy-button text-monospace" 
+      style="cursor: pointer;" 
+      ngxClipboard 
+      [cbContent]="'coris.network/'+link" 
+      (click)="onCopySucceess()"
+      mdbTooltip="copy to clipboard" mdbTooltipPosition="above">
+        coris.network/{{link}}
+      </i>  
     </ng-template>
     <a  class="btn-floating green waves-light" 
         mdbWavesEffect
@@ -26,6 +24,6 @@
         <i class="fas fa-external-link-alt"></i>
     </a>
     <a class="btn-floating red waves-light" (click)="onCloseClick()" mdbWavesEffect><i class="fas fa-times"></i></a>
-  </div>
+  </div> -->
 
 </div>
