WiP: More cleanup in ngrx & services; Css fixes

--- a/src/app/components/popups/btn-close/btn-close.component.html
+++ b/src/app/components/popups/btn-close/btn-close.component.html
@@ -3,8 +3,8 @@
   <a class="btn-floating btn-large red waves-light" mdbWavesEffect (click)="onCloseClick()">
     <i class="fas fa-times"></i>
   </a>
-
-  <!-- <div class="fixed_collapse" mdbCollapse="isCollapsed" #fixed="bs-collapse">
+</div>
+<div class="fixed-action-btn" style="bottom: 35px; right: 24px;">
     <ng-template #popTemplate>
       <i 
       class="ion-ios-copy copy-button text-monospace" 
@@ -19,11 +19,8 @@
     <a  class="btn-floating green waves-light" 
         mdbWavesEffect
         [mdbPopover]="popTemplate"
-        placement="left"
+        placement="top"
         mdbPopoverHeader="External link">
         <i class="fas fa-external-link-alt"></i>
     </a>
-    <a class="btn-floating red waves-light" (click)="onCloseClick()" mdbWavesEffect><i class="fas fa-times"></i></a>
-  </div> -->
-
 </div>
