--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -22,12 +22,11 @@
           <ng-container matColumnDef="proposer">
             <th mat-header-cell *matHeaderCellDef class="th-lg"><i class="ion-android-contact"></i>&nbsp;Proposer</th>
             <td mat-cell *matCellDef="let block">
-              <mat-chip-list><mat-chip color = "primary" selected (click)="openValidatorDialog( block.proposer)" style="cursor: pointer;">
-                <span *ngIf="(validatorsState$ | async).validatorsMap.size ? (validatorsState$ | async).validatorsMap.has(block.proposer) : false; else elseBlockProposer">
-                  {{ (validatorsState$ | async).validatorsMap.get(block.proposer) }}
-                </span>
-              </mat-chip></mat-chip-list>
-              <ng-template #elseBlockProposer>{{block.proposer}}</ng-template>
+              <mat-chip-list>
+                <mat-chip color = "primary" selected (click)="openValidatorDialog( block.proposer)" style="cursor: pointer;">
+                  <app-validator-span [validator]="block.proposer"></app-validator-span>
+                </mat-chip>
+              </mat-chip-list>
             </td>
           </ng-container>
       
