--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,36 +1,9 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
-// @import '~bootstrap/dist/css/bootstrap.min.css';
-// @import "https://fonts.googleapis.com/css?family=Lato:100,300,300i,400";
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,300i,400);
+@import "app/theme";
 
-// @viewport {
-//   width: device-width ;
-//   zoom: 1.0 ;
-// }
-
-// i {
-//   margin-right: 5px;
-// }
-
-// .clickable {
-//   cursor: pointer;
-// }
-
-// html,
-// body{
-//   background: #484C52;
-//   color: black;
-// }
-
-/* @aakatev moved from app.components.css */
-/*-------------------------------------------------*/
-/* Basic Setup */
-/*-------------------------------------------------*/
 html, body {
   font-size: 20px;
   line-height: 1.5;
-  background: white;
-  color: black;
   font-family: 'Lato', 'Arial', sans-serif;
   font-weight: 300;
   text-rendering: optimizeLegibility;
@@ -38,18 +11,6 @@ html, body {
   margin: 0;
 }
 
-// .clearfix {zoom: 1;}
-// .clearfix:after {
-//     content: '.';
-//     clear: both;
-//     display: block;
-//     height: 0;
-//     visibility: hidden;
-// }
-
-/*-------------------------------------------------*/
-/* Reusable Components */
-/*-------------------------------------------------*/
 nav {
   height: 10vh;
   background: #111923;
@@ -60,19 +21,14 @@ section {
 }
 
 .row {
-  max-width: 95%; /*1140px or in %*/
+  max-width: 95%;
   margin: 0 auto;
 }
 
 .box {
   padding: 1%;
-  /* box-shadow: 2px 2px 3px; */
 }
 
-/* .box-key {
-  text-align: left;
-  margin-left: 5px;
-} */
 
 .mat-card-header-text {
   margin-left: 5px;
@@ -138,15 +94,12 @@ a:link,
 a:visited {
     color: black;
     text-decoration: none;
-    /* padding-bottom: 10px; */
-    /* border-bottom: 1px solid #e67e22; */
     transition: color 0.2s;
 }
 
 a:hover,
 a:active {
     color: #FF4081;
-    /* border-bottom: 1px solid transparent; */
     text-decoration: underline; 
 }
 
@@ -161,31 +114,13 @@ header {
 }
 
 .landing {
-  /* height: 90vh; */
-  /* display: flex; */
   justify-content: center;
   align-items: center;
 
 }
-/*-------------------------------------------------*/
-/* Specific */
-/*-------------------------------------------------*/
-/* .header-row,
-.proposer-row,
-.chain-queries-row {
-  max-width: 1140px;
-  margin: 0 20px;
-
-}  */
-
 .main-container {
   min-height: 76vh;
 }
-
-// .card {
-//   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.18);
-//   margin-bottom: 2rem;
-// }
 
 .card-header-title {
   color:#8F99A3;
