WiP: more work on dark theme

--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<body class="indigo-skin">
+<body [className]="(theme$|async) === 'dark-theme' ? 'grey-skin' : 'indigo-skin'">
 <!-- <body class="grey-skin"> -->
     <!--Double navigation-->
   <header>
