--- a/src/app/resources/style.css
+++ b/src/app/resources/style.css
@@ -28,11 +28,11 @@ html {
 /* Reusable Components */
 /*-------------------------------------------------*/
 
-.row {
+/* .row {
     max-width: 1140px;
     margin: 0 auto;
 
-}
+} */
 
 section {
     padding: 80px 0;
