--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -1,5 +1,5 @@
 <app-chart-cards></app-chart-cards>
-<div class="row main-row" *ngIf="true; else elseBlock">
+<div class="row" *ngIf="true; else elseBlock">
   <!-- @aakatev	
     https://github.com/cosmos/cosmos-sdk/blob/9a16e2675f392b083dd1074ff92ff1f9fbda750d/types/staking.go
     Unbonded  BondStatus = 0x00
@@ -25,7 +25,7 @@
     </div>
   </div>
 
-  <div class="example-container mat-elevation-z8 scrollbar-primary table-responsive text-nowrap">
+  <div class="mat-elevation-z8 scrollbar-primary table-responsive text-nowrap">
     <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8 w-auto">
 
       <ng-container matColumnDef="rank">
