--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -1,6 +1,4 @@
-<body [className]="(theme$|async) === 'dark-theme' ? 'grey-skin' : 'indigo-skin'">
-<!-- <body class="grey-skin"> -->
-    <!--Double navigation-->
+<body [className]="(theme$|async) === 'dark-theme' ? 'navy-blue-skin' : 'indigo-skin'">
   <header>
       <!-- Sidebar navigation -->
       <mdb-side-nav #sidenavRef class="sn-bg-1" [fixed]="false">
@@ -9,8 +7,7 @@
           <li>
             <div class="logo-wrapper waves-light">
               <a [routerLink]="['/validators']">
-                <!-- <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" class="img-fluid flex-center"> -->
-                <img src="../../../../assets/img/Coris_logo.png" class="img-fluid flex-center logo">
+              <img src="../../../../assets/img/Coris_logo.png" class="img-fluid flex-center logo">
               </a>
             </div>
           </li>
@@ -45,14 +42,14 @@
           </li>
           <!--/Social-->
           <!--Search Form-->
-          <li>
+          <!-- <li>
             <form class="search-form" role="search">
               <div class="form-group md-form mt-0 pt-1 waves-light" mdbWavesEffect>
                 <input #mobileSearchQueryRef type="text" class="form-control" placeholder="enter here">
                 <button (click)="onMobileSearchBtnClick(mobileSearchQueryRef.value)" mdbBtn color="white" outline="true" size="sm" class="my-0 waves-light" type="submit" mdbWavesEffect>Search</button>
               </div>
             </form>
-          </li>
+          </li> -->
           <!--/.Search Form-->
           <!-- Side navigation links -->
           <li>
@@ -78,8 +75,8 @@
     
                 <!-- Simple link -->
                 <mdb-accordion-item class="no-collase">
-                  <mdb-accordion-item-head mdbWavesEffect routerLink="/validators">
-                    <i class="fas fa-users"></i> Validator
+                  <mdb-accordion-item-head routerLinkActive="active" mdbWavesEffect routerLink="/validators">
+                    <i class="fas fa-users"></i> Validators
                   </mdb-accordion-item-head>
                   <mdb-accordion-item-body></mdb-accordion-item-body>
                 </mdb-accordion-item>
@@ -103,28 +100,30 @@
     
                 <!-- Simple link -->
                 <mdb-accordion-item class="no-collase">
-                  <mdb-accordion-item-head mdbWavesEffect routerLink="/blocks">
-                    <i class="fa fa-cubes"></i> Block
+                  <mdb-accordion-item-head routerLinkActive="active" mdbWavesEffect routerLink="/blocks">
+                    <i class="fa fa-cubes"></i> Blocks
                   </mdb-accordion-item-head>
                   <mdb-accordion-item-body></mdb-accordion-item-body>
                 </mdb-accordion-item>
                 
                 <mdb-accordion-item class="no-collase">
-                    <mdb-accordion-item-head mdbWavesEffect routerLink="/txs">
-                      <i class="fa fa-tasks"></i> Transaction
+                    <mdb-accordion-item-head mdbWavesEffect routerLinkActive="active" routerLink="/txs">
+                      <i class="fa fa-tasks"></i> Transactions
                     </mdb-accordion-item-head>
                     <mdb-accordion-item-body></mdb-accordion-item-body>
                 </mdb-accordion-item>
 
                 <mdb-accordion-item class="no-collase">
-                  <mdb-accordion-item-head mdbWavesEffect routerLink="/gov">
+                  <mdb-accordion-item-head mdbWavesEffect routerLinkActive="active" routerLink="/gov">
                     <i class="fa fa-university"></i> Governance
                   </mdb-accordion-item-head>
                   <mdb-accordion-item-body></mdb-accordion-item-body>
               </mdb-accordion-item>
 
               <mdb-accordion-item class="no-collase">
-                <mat-slide-toggle (change)="onToggleTheme()" class="app-toggle">Night Mode</mat-slide-toggle>
+                <h4 class="theme-toggle justify-content-between align-items-center">
+                  <mat-slide-toggle (change)="onToggleTheme()" class="app-toggle">Dark Theme</mat-slide-toggle>
+                </h4>
               </mdb-accordion-item>
   
               </mdb-accordion>
