--- a/src/app/components/navigation/sidenav/sidenav.component.scss
+++ b/src/app/components/navigation/sidenav/sidenav.component.scss
@@ -37,3 +37,11 @@ a:active {
 .form-control::placeholder{
   color: white;
 }
+
+.theme-toggle {
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin-right: 10px;
+  margin-top: 30px;
+}
