WiP: dark theme completed

--- a/src/app/components/status-bar/carousel/carousel.component.html
+++ b/src/app/components/status-bar/carousel/carousel.component.html
@@ -15,7 +15,7 @@
         <div class="card card-cascade cascading-admin-card">
           <!--Card Data-->
           <div class="admin-up">
-            <mdb-icon fas icon="{{card.icon}}" class="indigo" size="lg"></mdb-icon>
+            <mdb-icon fas icon="{{card.icon}}" size="lg"></mdb-icon>
             <div class="data">
               <p>{{card.title}}</p>
               <h4 class="h4-responsive">{{card.data}}</h4>
