WiP: More style fixes

--- a/src/app/components/status-bar/carousel/carousel.component.html
+++ b/src/app/components/status-bar/carousel/carousel.component.html
@@ -8,7 +8,7 @@
     <!-- ----------- staus card ------------- -->
     <div class="row">
        <!--Grid column-->
-       <div class="flex-fill col-xl-3 col-md-6 my-4" 
+       <div class="d-inline-block flex-fill col-xl-3 col-md-6 my-4" 
             [ngClass]="{'d-none d-md-block': cardIndex !== 0}" 
             *ngFor="let card of item; let cardIndex = index">
         <!--Card-->
